# soccer_prediction

./: .env.example  README.md  pyproject.toml
.claude/: launch.json
src/corner_predictor/: __init__.py  config.py  main.py
src/corner_predictor/api/: deps.py  routes.py  websocket.py
src/corner_predictor/data_sources/: base.py  mock_simulator.py  models.py
src/corner_predictor/engine/: match_runner.py
src/corner_predictor/features/: engine.py  models.py
src/corner_predictor/model/: probability.py  rate_estimator.py  schemas.py
src/corner_predictor/persistence/: db.py  repository.py  schema.py
src/corner_predictor/static/: dashboard.js  index.html  style.css
tests/: conftest.py  test_api.py  test_feature_engine.py  test_match_runner.py  test_mock_simulator.py  test_persistence.py  test_probability_model.py  test_rate_estimator.py
