[project]
name = "corner-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marshall.zheng", email = "zheng0306@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
corner-predictor = "corner_predictor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
